--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": ">=5.5",
         "laravel/laravel": "~5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "license": "MIT",
     "authors": [
         {
